--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /ProjectSEttings
 /Temp
 /UserSettings
-Adventure of Time.sln
+Adventure-of-Time.sln
 Assembly-CSharp.csproj
 Assembly-CSharp-Editor.csproj
 AssetCleaner.csproj
